--- a/css/style.css
+++ b/css/style.css
@@ -15,20 +15,25 @@
 html {
   font-family: "Ubuntu", "Lato", sans-serif;
 }
+
 html body {
   width: 100%;
   background-color: black;
 }
+
 html body::-webkit-scrollbar {
   width: 0.7rem;
 }
+
 html body::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 1px;
 }
+
 html body .btn {
   cursor: pointer;
 }
+
 html body .btn:hover {
   scale: 1.05;
 }
@@ -45,20 +50,24 @@ html body .btn:hover {
   height: 100%;
   backdrop-filter: blur(3px);
 }
+
 .tabContainer.active {
   display: block;
   position: fixed;
 }
+
 .tabContainer input {
   outline: 0.5px solid rgb(173, 255, 47);
   color: gray;
   font-style: italic;
 }
+
 .tabContainer ::placeholder {
   font-size: 0.9em;
   font-style: italic;
   color: darkgray;
 }
+
 .tabContainer .tab {
   font-family: "Ubuntu", "Lato", sans-serif;
   font-size: 1em;
@@ -74,13 +83,16 @@ html body .btn:hover {
   border: 1px solid rgb(173, 255, 47);
   overflow: auto;
 }
+
 .tabContainer .tab::-webkit-scrollbar {
   width: 0.5rem;
 }
+
 .tabContainer .tab::-webkit-scrollbar-thumb {
   background-color: rgb(173, 255, 47);
   border-radius: 50px;
 }
+
 @media screen and (min-width: 600px) {
   .tabContainer .tab {
     width: 70vw;
@@ -88,6 +100,7 @@ html body .btn:hover {
     left: 15vw;
   }
 }
+
 @media screen and (min-width: 900px) {
   .tabContainer .tab {
     width: 50vw;
@@ -95,11 +108,13 @@ html body .btn:hover {
     left: 25vw;
   }
 }
+
 .tabContainer .headerTab {
   background-color: rgb(255, 255, 255);
   width: 100%;
   height: 50px;
 }
+
 .tabContainer .btnCloseTab {
   border: none;
   background-color: transparent;
@@ -109,13 +124,16 @@ html body .btn:hover {
   color: gray;
   margin: 0.3rem 0.5rem;
 }
+
 .tabContainer .btnCloseTab:hover {
   color: black;
 }
+
 .tabContainer .options {
   display: flex;
   list-style: none;
 }
+
 .tabContainer .options .option {
   cursor: pointer;
   flex-grow: 1;
@@ -126,14 +144,17 @@ html body .btn:hover {
   font-style: italic;
   margin-top: 1rem;
 }
+
 .tabContainer .options .option.optionActive {
   border-bottom: 4px solid rgb(173, 255, 47);
 }
+
 .tabContainer .contents {
   width: 100%;
   height: 100%;
   text-align: center;
 }
+
 .tabContainer .contents .content {
   width: 100;
   height: 100%;
@@ -141,9 +162,11 @@ html body .btn:hover {
   display: none;
   padding: 20px;
 }
+
 .tabContainer .contents .contentActive {
   display: block;
 }
+
 .tabContainer .contents .form {
   align-items: center;
   justify-content: center;
@@ -151,9 +174,11 @@ html body .btn:hover {
   /* ALERTS DEL FORM */
   /* DIV DE TERMS */
 }
+
 .tabContainer .contents .form .form-label {
   margin-bottom: 0.1rem;
 }
+
 .tabContainer .contents .form .divForm {
   display: flex;
   flex-direction: column;
@@ -163,6 +188,7 @@ html body .btn:hover {
   /* CADA CASILLA DE INPUT */
   /* BOTON SUBMIT */
 }
+
 .tabContainer .contents .form .divForm .form-control {
   max-width: 95%;
   height: 35px;
@@ -171,6 +197,7 @@ html body .btn:hover {
   font-size: 1em;
   text-align: center;
 }
+
 .tabContainer .contents .form .divForm .btnSubmit,
 .tabContainer .contents .form .divForm .btnSubmitLogin {
   background-color: rgb(173, 255, 47);
@@ -186,22 +213,26 @@ html body .btn:hover {
   padding: 0.5rem 1rem;
   border-radius: 45px 25px 45px 25px;
 }
+
 .tabContainer .contents .form .divForm .btnSubmit:hover,
 .tabContainer .contents .form .divForm .btnSubmitLogin:hover {
   transform: scale(1.03);
   transition: all 200ms ease;
 }
+
 .tabContainer .contents .form .alertRegister,
 .tabContainer .contents .form .alertLogin {
   font-size: 0.8em;
   font-weight: lighter;
 }
+
 .tabContainer .contents .form .terms {
   display: block;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
+
 .tabContainer .contents .form .terms a {
   color: gray;
 }
@@ -213,15 +244,18 @@ html body .btn:hover {
   top: 0;
   z-index: 10;
 }
+
 .header .headerContainer {
   display: flex;
   align-items: center;
   justify-content: space-around;
   padding: 0.2rem;
 }
+
 .header .headerContainer .headerLogo {
   max-width: 150px;
 }
+
 .header .headerContainer .navBar {
   position: relative;
   top: 0;
@@ -230,17 +264,20 @@ html body .btn:hover {
   align-items: center;
   justify-content: center;
 }
+
 .header .headerContainer .navBar .btnCarrito {
   display: flex;
   text-decoration: none;
   background-color: transparent;
   border: none;
 }
+
 .header .headerContainer .navBar .btnCarrito .carritoIcon {
   font-size: 24px;
   color: whitesmoke;
   position: relative;
 }
+
 .header .headerContainer .navBar .btnCarrito .carritoIcon .cantidadProductosCarritoIcon {
   text-align: center;
   position: absolute;
@@ -254,10 +291,12 @@ html body .btn:hover {
   top: -10px;
   right: -15px;
 }
+
 .header .headerContainer .navBar .btnCarrito:hover {
   transform: scale(1.06) rotate(-3deg);
   transition: all 200ms ease;
 }
+
 .header .headerContainer .navBar .userText {
   cursor: pointer;
   font-weight: lighter;
@@ -267,9 +306,10 @@ html body .btn:hover {
   margin-top: 1rem;
   font-size: 0.8em;
   text-align: center;
-  color: gray;
+  ctextFooterolor: gray;
   border: 0;
 }
+
 .header .headerContainer .navBar .userText:hover {
   transform: scale(1.05);
   transition: all 200ms ease;
@@ -282,39 +322,55 @@ html body .btn:hover {
   color: gray;
   padding: 0.5rem;
 }
+
 .footer .footerKprem {
   display: flex;
   justify-content: center;
   margin: 1rem;
 }
+
 .footer .footerKprem .footerIcon {
   width: 32px;
   margin: 0.5rem;
 }
+
 .footer .footerKprem .footerIcon:hover {
   transform: scale(1.1);
   opacity: 0.7;
   transition: all 300ms ease;
 }
+
 .footer .footerDev {
   border-top: 1px solid gray;
 }
+
+.textFooter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer .footerDev .textFooter {
   margin-top: 1rem;
 }
+
 .footer .footerDev .devImg {
+  display: flex;
   margin: 0.5rem;
-  width: 40px;
-}
-.footer .footerDev .devImg:hover {
-  transform: scale(1.05);
+  width: 24px;
+  height: 24px;
   transition: all 200ms ease;
+}
+
+.footer .footerDev .devImg:hover {
+  transform: scale(1.05) rotate(7deg);
 }
 
 .main {
   padding: 2rem 2rem 4rem;
   background-color: white;
 }
+
 .main .containerMain {
   display: flex;
   flex-direction: column;
@@ -323,6 +379,7 @@ html body .btn:hover {
   justify-content: center;
   align-items: center;
 }
+
 .main .containerMain .mainText {
   background-color: rgba(219, 219, 219, 0.4);
   padding: 0.5rem;
@@ -330,6 +387,7 @@ html body .btn:hover {
   width: 80%;
   margin-bottom: 1rem;
 }
+
 .main .wtpFixed {
   position: fixed;
   bottom: 25px;
@@ -337,6 +395,7 @@ html body .btn:hover {
   z-index: 3;
   width: 48px;
 }
+
 .main .wtpFixed:hover {
   transform: scale(1.06) rotate(-3deg);
   transition: all 200ms ease;
@@ -345,6 +404,7 @@ html body .btn:hover {
 .mainProductos {
   padding: 0rem 1rem;
 }
+
 @media (min-width: 600px) {
   .mainProductos {
     width: 100%;
@@ -353,6 +413,7 @@ html body .btn:hover {
     justify-content: center;
   }
 }
+
 .mainProductos .producto {
   background-color: rgb(0, 166, 214);
   background: linear-gradient(0deg, rgb(0, 166, 214) 0%, rgb(0, 121, 255) 100%);
@@ -367,23 +428,28 @@ html body .btn:hover {
   margin: 1rem 15px;
   align-items: center;
 }
+
 .mainProductos .producto .productoImg {
   max-width: 250px;
 }
+
 .mainProductos .producto .textContent {
   text-align: justify;
   position: absolute;
   bottom: 10px;
 }
+
 .mainProductos .producto .textContent .nombreText {
   font-size: 1.3em;
   font-weight: 500;
   font-style: italic;
   margin-bottom: 0.2rem;
 }
+
 .mainProductos .producto .textContent .precioText {
   margin-top: 0.2rem;
 }
+
 .mainProductos .producto .btnAgregar {
   font-style: italic;
   text-transform: uppercase;
@@ -399,10 +465,12 @@ html body .btn:hover {
   right: -15px;
   bottom: -20px;
 }
+
 .mainProductos .producto .btnAgregar:hover {
   transform: scale(1.05);
   transition: all 200ms ease;
 }
+
 .mainProductos .producto .btnAgregar:active {
   transform: scale(1);
 }
@@ -412,12 +480,14 @@ html body .btn:hover {
   flex-direction: column;
   text-align: center;
 }
+
 .mainCarrito .titleCarrito {
   font-size: 1.5em;
   font-style: italic;
   text-decoration: underline;
   margin-bottom: 1rem;
 }
+
 .mainCarrito .table {
   padding: 0.5rem;
   background-color: rgb(173, 255, 47);
@@ -425,26 +495,33 @@ html body .btn:hover {
   overflow-x: auto;
   border-collapse: collapse;
 }
+
 .mainCarrito .table .thead {
   background-color: rgb(173, 255, 47);
   font-size: 1.1em;
 }
+
 .mainCarrito .table .thead th {
   padding: 0.5rem;
 }
+
 .mainCarrito .table .tbody {
   background-color: rgb(219, 219, 219);
 }
+
 .mainCarrito .table .tbody td {
   padding: 1rem;
 }
+
 .mainCarrito .table .tbody tr:nth-of-type(odd) {
   background-color: whitesmoke;
 }
+
 .mainCarrito .table .tfoot {
   background-color: rgb(173, 255, 47);
   border-top: 2px solid white;
 }
+
 .mainCarrito .table .tfoot th {
   font-size: 1.1em;
   font-style: italic;
@@ -457,6 +534,7 @@ html body .btn:hover {
   transition: all 200ms ease;
   transform: scale(0.2);
 }
+
 .mainCarrito.active {
   opacity: 1;
   position: fixed;
@@ -469,11 +547,13 @@ html body .btn:hover {
   transform: scale(1);
   z-index: 100;
 }
+
 @media screen and (min-width: 600px) {
   .mainCarrito.active {
     padding: 2% 10%;
   }
 }
+
 .mainCarrito .tablaCarrito {
   display: flex;
   flex-direction: column;
@@ -488,33 +568,40 @@ html body .btn:hover {
   padding: 0.2rem;
   position: relative;
 }
+
 .mainCarrito .tablaCarrito::-webkit-scrollbar {
   width: 0.5rem;
 }
+
 .mainCarrito .tablaCarrito::-webkit-scrollbar-thumb {
   background-color: rgba(0, 121, 255, 0.6);
   border-radius: 50px;
 }
+
 @media screen and (min-width: 600px) {
   .mainCarrito .tablaCarrito {
     font-size: 1em;
     padding: 1.5rem;
   }
 }
+
 .mainCarrito .tablaCarrito .headerCarrito {
   display: flex;
 }
+
 .mainCarrito .tablaCarrito .headerCarrito .icoClose {
   position: absolute;
   right: 0;
   top: 0;
   margin: 0.3rem 0.5rem;
 }
+
 .mainCarrito .tablaCarrito .tabla {
   width: 100%;
   margin-top: 1rem;
   justify-content: space-around;
 }
+
 .mainCarrito .tablaCarrito .tabla #iconSumar,
 .mainCarrito .tablaCarrito .tabla #iconRestar {
   background-color: transparent;
@@ -523,26 +610,31 @@ html body .btn:hover {
   margin: 0, 0.2rem;
   color: gray;
 }
+
 .mainCarrito .tablaCarrito .tabla #iconSumar #i,
 .mainCarrito .tablaCarrito .tabla #iconRestar #i {
   background-color: transparent;
 }
+
 .mainCarrito .tablaCarrito .tabla .tituloCarrito {
   color: #272727;
   font-size: 1.2em;
   font-weight: 500;
   border-bottom: solid 1.5px #272727;
 }
+
 .mainCarrito .imgItemCarrito {
   height: 64px;
   width: auto;
 }
+
 @media screen and (min-width: 600px) {
   .mainCarrito .imgItemCarrito {
     width: 72px;
     height: auto;
   }
 }
+
 .mainCarrito .sumaTotal {
   background-color: rgb(0, 121, 255);
   margin: 1rem;
@@ -551,6 +643,7 @@ html body .btn:hover {
   font-weight: 400;
   font-size: 1.1em;
 }
+
 .mainCarrito .btnVaciarCarrito,
 .mainCarrito .finalizarCompra {
   margin: 0.5rem;
@@ -563,11 +656,13 @@ html body .btn:hover {
   justify-content: space-between;
   cursor: pointer;
 }
+
 .mainCarrito .btnVaciarCarrito:hover,
 .mainCarrito .finalizarCompra:hover {
   scale: 1.05;
   transform: all 200ms ease;
 }
+
 .mainCarrito .finalizarCompra {
   background-color: rgb(0, 121, 255);
 }
@@ -576,6 +671,7 @@ html body .btn:hover {
   padding: 1rem 2rem;
   font-size: 1em;
 }
+
 .mainTerms h1 {
   font-size: 2em;
   margin-bottom: 2rem;
